--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
 
     - name: Install dependencies
       run: pip install pytest # Exécute une commande shell
+      pip install -r requirements.txt # Installe les dépendances à partir du fichier requirements.txt
 
     - name: Run tests
       run: pytest
